# one-pace-metadata

./: .gitattributes  LICENSE  README.md  arcs.yml  config.yml  data.json  data.min.json  data.yml  main.py  pyproject.toml  status.json  status.yml  tvshow.yml
._github/workflows/: metadata-job.yml
.github/workflows/: clean-workflow-runs.yml  metadata-compat.yml  metadata-job.yml  metadata-updater.yml
episodes/: .yml  0017358A.yml  00768DB7.yml  0144BBBA.yml  014834ED.yml  01874097.yml  01C40FA1.yml  021A8886.yml  02C6FC2B.yml  04186119.yml  0429451F.yml  0433686D.yml  04C7B716.yml  0510B910.yml  05BE81E6.yml  066FD68B.yml  06BF070D.yml  06F25D1B.yml  074A4A31.yml  07F7124B.yml  0880B38F.yml  088462CB.yml  08B90884.yml  099FB95D.yml  0A2624D5.yml  0AB937B1.yml  0B51015F.yml  0B965026.yml  0C2DBF75.yml  0C5E9A92.yml  0CA47011.yml  0CBF5258.yml  0CF96D5A.yml  0D273612.yml  0D3E2158.yml  0E0C5A82.yml  0E201E28.yml  0E2022E4.yml  0F125E00.yml  0F3017E1.yml  (+522 more)
episodes/archive/: 23CF2FA6.yml  4B882BCA.yml  5AF7A9B1.yml  72F22A68_1.yml  9269F40F.yml  952F5BEB.yml  ACBE88D6.yml  CE01A533.yml  DECF4267.yml  E75794DB.yml  FA63AC14.yml
metadata/: arcs.json  arcs.min.json  arcs.yml  data.json  data.min.json  data.sqlite  data.yml  data_with_posters.sqlite  descriptions.json  descriptions.min.json  descriptions.yml  episodes.json  episodes.min.json  episodes.yml  other_edits.json  other_edits.min.json  other_edits.yml  status.json  status.yml  tvshow.json  tvshow.min.json  tvshow.yml
metadata/episodes/: 00768DB7.yml  00EB6532.yml  01874097.yml  01C40FA1.yml  021A8886.yml  0429451F.yml  0433686D.yml  05BE81E6.yml  0B51015F.yml  0B965026.yml  0C2DBF75.yml  0C5E9A92.yml  0CBF5258.yml  0CF96D5A.yml  0D273612.yml  0D3E2158.yml  0E0C5A82.yml  0E201E28.yml  0E2022E4.yml  0EB7F7E9.yml  0F3017E1.yml  0F8517DC.yml  11DA7BCB.yml  1306F53D.yml  1375A4F5.yml  1753F7D1.yml  1809DA8A.yml  194603B0.yml  19D3B6A3.yml  1A183CBE.yml  1CADC5DC.yml  (+218 more)
src/: main.py  pyproject.toml  schema.sql
stremio/: manifest.json
(+1728 files in other folders)
